Import of TNAGA/PHP-Functions-File-0.02 from CPAN.
gitpan-cpan-distribution: PHP-Functions-File
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TNAGA/PHP-Functions-File-0.02.tar.gz
gitpan-cpan-author:       TNAGA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -12,7 +12,9 @@ To install this module type the following:
 
 DEPENDENCIES
 
-Nothing.
+This module requires these other modules and libraries:
+
+  Compress::Zlib
 
 COPYRIGHT AND LICENCE
 
