--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 Revision history for Perl extension PHP::Functions::File.
 
+0.02  May 11 2012
+	- Add zlib compression support.
+
 0.01  May 6 2012
 	- Release
