--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension PHP::Functions::File.
 
+0.04  May 11 2012
+   - Some more bug fix.
+
 0.03  May 11 2012
    - Bug fix. Thanks for ANDK.
    - Add more information in manual
